[package]
name = "decktime"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
env_logger = "0.11.6"
itertools = "0.14.0"
log = "0.4.22"
rusqlite = { version = "0.32.1", features = ["bundled"] }

[profile.release]
opt-level = 3
lto = true
