[package]
name = "decktime"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
env_logger = "0.11.6"
itertools = "0.14.0"
log = { version = "0.4.22", features = ["release_max_level_info"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
signal-hook = "0.3.17"

[profile.release]
opt-level = 3
lto = true
